--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@harperdb/code-guidelines": "^0.0.2",
+		"@modelcontextprotocol/sdk": "^1.11.0",
 		"@types/node": "^22.10.2",
 		"prettier": "^3.4.2",
 		"tsx": "^4.19.2",
 		"typescript": "^5.7.2"
 	},
-	"dependencies": {
-		"@modelcontextprotocol/sdk": "^1.10.2"
-	}
+	"dependencies": {}
 }
